cabal-version: 3.0
name:          twilight-bot
version:       1.0.0
synopsis:      After Sundown Mumble bot.
description:
  Multi-functional Twitch bot for After Sundown. Currently can only roll dice
  and generate tarot card spreads.

homepage:      https://github.org/kozross/twilight
license:       Apache-2.0
license-file:  LICENSE.md
author:        Koz Ross
maintainer:    koz.ross@retro-freedom.nz
bug-reports:   https://github.org/kozross/twilight/issues
copyright:     (C) Koz Ross 2021
category:      Text
tested-with:   GHC ==8.10.3
build-type:    Simple

executable twilight-bot
  main-is:          Main.hs
  build-depends:
    , base             ==4.14.1.0
    , openssl-streams  ^>=1.2.3.0
    , proto3-wire      ^>=1.2.0
    , unagi-streams    ^>=0.2.7

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror -O2
    -threaded -with-rtsopts=-N

  hs-source-dirs:   src
  default-language: Haskell2010
